@@ -1,4 +1,2 @@
 # flake8: noqa: F401
-from .dataset import activate_dataset, add_resource, create_dataset, \
-    remove_draft, remove_all_drafts, resource_exists, resource_sha256_sums
 from .queue import UploadQueue, UploadJob
