@@ -7,7 +7,8 @@ import tempfile
 import time
 
 from dcoraid.api import CKANAPI
-from dcoraid.upload import dataset, UploadQueue
+from dcoraid.api_common import create_dataset
+from dcoraid.upload import UploadQueue
 
 
 CIRCLE = "dcoraid-circle"
@@ -56,7 +57,7 @@ def make_dataset_for_download(seed=0):
     # create some metadata
     dataset_dict = make_dataset_dict(hint="test-download-dataset")
     # post dataset creation request
-    data = dataset.create_dataset(dataset_dict=dataset_dict, api=api)
+    data = create_dataset(dataset_dict=dataset_dict, api=api)
     joblist = UploadQueue(api=api)
     joblist.new_job(dataset_id=data["id"],
                     paths=[dpath])
